# stutter

./: LICENSE  README.md  prelude.stutter  stack.yaml  stutter.cabal
examples/: 1_to_100.stutter  fibonacci.stutter  list_functions.stutter  math.stutter  peano.stutter  quicksort.stutter
src/: Builtins.hs  Main.hs  Parser.hs  StutterEvaluator.hs  StutterParser.hs  Types.hs
